--- a/ebproof.tex
+++ b/ebproof.tex
@@ -84,10 +84,10 @@ style of sequent calculus and related systems:
 
 \begin{example}{gobble=2}
   \begin{prooftree}
-    \Hypo{ \Gamma, A &\vdash B }
-    \Infer1[abs]{ \Gamma &\vdash A\to B }
-    \Hypo{ \Gamma \vdash A }
-    \Infer2[app]{ \Gamma \vdash B }
+    \hypo{ \Gamma, A &\vdash B }
+    \infer1[abs]{ \Gamma &\vdash A\to B }
+    \hypo{ \Gamma \vdash A }
+    \infer2[app]{ \Gamma \vdash B }
   \end{prooftree}
 \end{example}
 
@@ -132,15 +132,15 @@ larger structure, like two parts of a formula:
 \begin{example}{gobble=2}
   \[
     \begin{prooftree}
-      \Infer0{ \vdash A }
-      \Hypo{ \vdash B } \Infer1{ \vdash B, C }
-      \Infer2{ \vdash A\wedge B, C }
+      \infer0{ \vdash A }
+      \hypo{ \vdash B } \infer1{ \vdash B, C }
+      \infer2{ \vdash A\wedge B, C }
     \end{prooftree}
     \quad \rightsquigarrow \quad
     \begin{prooftree}
-      \Infer0{ \vdash A } \Hypo{ \vdash B }
-      \Infer2{ \vdash A\wedge B }
-      \Infer1{ \vdash A\wedge B, C }
+      \infer0{ \vdash A } \hypo{ \vdash B }
+      \infer2{ \vdash A\wedge B }
+      \infer1{ \vdash A\wedge B, C }
     \end{prooftree}
   \]
 \end{example}
@@ -151,7 +151,7 @@ larger structure, like two parts of a formula:
 Statements describe proofs in postfix notation: when typesetting a proof tree
 whose last rule has, say, two premisses, you will first write statements for
 the subtree of the first premiss, then statements for the subtree of the
-second premiss, then a statement like \cs{Infer2}\{\meta{conclusion}\} to
+second premiss, then a statement like \cs{infer2}\{\meta{conclusion}\} to
 build an inference with these two subtrees as premisses and the given text as
 conclusion.
 
@@ -160,17 +160,26 @@ At the beginning of a \lit{prooftree} environment, the stack is empty.
 At the end, it must contain exactly one tree, which is the one that will be
 printed.
 
+Note that the commands defined in this section only exist right inside
+\env{prooftree} environments.
+If you have a macro with the same name as one of the statements, for instance
+\cs{hypo}, then this macro will keep its meaning outside \env{prooftree}
+environments as well as inside the arguments of a statement.
+If you really need to access the statements in another context, you can can
+always call them by prefixing their names with \lit{ebproof}, for instance as
+\cs{ebproofhypo}.
+
 \subsection{Basic statements}
 
 The basic statements for building proofs are the following, where
 \meta{options} stands for arbitrary options as described in
 section~\ref{sec:options}.
-\begin{csdoc}{\cs{Hypo}\oarg{options}\marg{text}}
+\begin{csdoc}{\cs{hypo}\oarg{options}\marg{text}}
   Push a new proof tree consisting only in one conclusion line, with no
   premiss and no line above, in other words a tree with only a leaf
-  (\cs{Hypo} stands for \emph{hypothesis}).
+  (\cs{hypo} stands for \emph{hypothesis}).
 \end{csdoc}
-\begin{csdoc}{\cs{Infer}\oarg{options}\marg{arity}\oarg{label}\marg{text}}
+\begin{csdoc}{\cs{infer}\oarg{options}\marg{arity}\oarg{label}\marg{text}}
   Build an inference step by taking some proof trees from the top of the
   stack, assembling them with a rule joining their conclusions and putting a
   new conclusion below.
@@ -192,30 +201,30 @@ The position of the axis is deduced from the text of the conclusion at the
 root of the tree: if \meta{text} contains the alignment character \verb|&|
 then the axis is set at that position, otherwise the axis is set at the center
 of the conclusion text.
-The \cs{Infer} statement makes sure that the axis of the premiss is at the
+The \cs{infer} statement makes sure that the axis of the premiss is at the
 same position as the axis of the conclusion.
 If there are several premisses, it places the axis at the center between the
 left of the leftmost conclusion and the right of the rightmost conclusion:
 
 \begin{example}{gobble=2}
   \begin{prooftree}
-    \Hypo{ &\vdash A, B, C }
-    \Infer1{ A &\vdash B, C }
-    \Infer1{ A, B &\vdash C }
-    \Hypo{ D &\vdash E }
-    \Infer2{ A, B, D &\vdash C, E }
-    \Infer1{ A, B &\vdash C, D, E }
-    \Infer1{ A &\vdash B, C, D, E }
+    \hypo{ &\vdash A, B, C }
+    \infer1{ A &\vdash B, C }
+    \infer1{ A, B &\vdash C }
+    \hypo{ D &\vdash E }
+    \infer2{ A, B, D &\vdash C, E }
+    \infer1{ A, B &\vdash C, D, E }
+    \infer1{ A &\vdash B, C, D, E }
   \end{prooftree}
 \end{example}
 
-\begin{csdoc}{\cs{Ellipsis}\marg{label}\marg{text}}
+\begin{csdoc}{\cs{ellipsis}\marg{label}\marg{text}}
   Typeset vertical dots, with a label on the right, and a new conclusion.
   No inference lines are inserted.
   \begin{example}{gobble=4}
     \begin{prooftree}
-      \Hypo{ \Gamma &\vdash A }
-      \Ellipsis{foo}{ \Gamma &\vdash A, B }
+      \hypo{ \Gamma &\vdash A }
+      \ellipsis{foo}{ \Gamma &\vdash A, B }
     \end{prooftree}
   \end{example}
 \end{csdoc}
@@ -226,7 +235,7 @@ left of the leftmost conclusion and the right of the rightmost conclusion:
 The following additional statements may be used to affect the format of the
 last proof tree on the stack:
 
-\begin{csdoc}{\cs{Rewrite}\marg{code}}
+\begin{csdoc}{\cs{rewrite}\marg{code}}
   Rewrite the proof while preserving its size and alignment. The \meta{code}
   is typeset in horizontal mode, with the following control sequences defined:
   \begin{itemize}
@@ -237,14 +246,14 @@ last proof tree on the stack:
   A simple use of this statement is to change the color of a proof tree:
   \begin{example}{gobble=4}
     \begin{prooftree}
-      \Hypo{ \Gamma, A &\vdash B }
-      \Infer1[abs]{ \Gamma &\vdash A\to B }
-      \Rewrite{\color{red}\box\treebox}
-      \Hypo{ \Gamma \vdash A }
-      \Infer2[app]{ \Gamma \vdash B }
+      \hypo{ \Gamma, A &\vdash B }
+      \infer1[abs]{ \Gamma &\vdash A\to B }
+      \rewrite{\color{red}\box\treebox}
+      \hypo{ \Gamma \vdash A }
+      \infer2[app]{ \Gamma \vdash B }
     \end{prooftree}
   \end{example}
-  Note the absence of spaces inside the call to \cs{Rewrite}, because spaces
+  Note the absence of spaces inside the call to \cs{rewrite}, because spaces
   would affect the position of the tree box.
   Note also that explicit use of \cs{treebox} is required to actually draw the
   subtree.
@@ -252,11 +261,11 @@ last proof tree on the stack:
   its space in the enclosing tree:
   \begin{example}{gobble=4}
     \begin{prooftree}
-      \Hypo{ \Gamma, A &\vdash B }
-      \Infer1[abs]{ \Gamma &\vdash A\to B }
-      \Rewrite{}
-      \Hypo{ \Gamma \vdash A }
-      \Infer2[app]{ \Gamma \vdash B }
+      \hypo{ \Gamma, A &\vdash B }
+      \infer1[abs]{ \Gamma &\vdash A\to B }
+      \rewrite{}
+      \hypo{ \Gamma \vdash A }
+      \infer2[app]{ \Gamma \vdash B }
     \end{prooftree}
   \end{example}
   This kind of manipulation is useful for instance in conjunction with the
@@ -264,20 +273,20 @@ last proof tree on the stack:
   progressively in successive slides of a given frame.
 \end{csdoc}
 
-\begin{csdoc}{\cs{Delims}\marg{left}\marg{right}}
+\begin{csdoc}{\cs{delims}\marg{left}\marg{right}}
   Put left and right delimiters around the whole sub-proof, without changing
   the alignment (the spacing is affected by the delimiters, however).
   The \meta{left} text must contain an opening occurrence of \cs{left} and the
   \meta{right} text must contain a matching occurrence of \cs{right}.
-  For instance, \verb|\Delims{\left(}{\right)}| will put the
+  For instance, \verb|\delims{\left(}{\right)}| will put the
   sub-proof between parentheses.
   \begin{example}{gobble=4}
     \begin{prooftree}
-      \Hypo{ A_1 \vee \cdots \vee A_n }
-      \Hypo{ [A_i] }
-      \Ellipsis{}{ B }
-      \Delims{ \left( }{ \right)_{1\leq i\leq n} }
-      \Infer2{ B }
+      \hypo{ A_1 \vee \cdots \vee A_n }
+      \hypo{ [A_i] }
+      \ellipsis{}{ B }
+      \delims{ \left( }{ \right)_{1\leq i\leq n} }
+      \infer2{ B }
     \end{prooftree}
   \end{example}
 \end{csdoc}
@@ -317,10 +326,10 @@ behaviour.
     Proof trees grow downwards, with conclusions above and premisses below.
     \begin{example}{gobble=4}
       \begin{prooftree}[proof style=downwards]
-        \Hypo{ \Gamma, A &\vdash B }
-        \Infer1[abs]{ \Gamma &\vdash A\to B }
-        \Hypo{ \Gamma \vdash A }
-        \Infer2[app]{ \Gamma \vdash B }
+        \hypo{ \Gamma, A &\vdash B }
+        \infer1[abs]{ \Gamma &\vdash A\to B }
+        \hypo{ \Gamma \vdash A }
+        \infer2[app]{ \Gamma \vdash B }
       \end{prooftree}
     \end{example}
   \end{csdoc}
@@ -339,12 +348,12 @@ For instance, the first line of the example above could be written
   The default value is \lit{true}.
   \begin{example}{gobble=4}
     \begin{prooftree}[center=false]
-      \Infer0{ A \vdash A }
+      \infer0{ A \vdash A }
     \end{prooftree}
     \qquad
     \begin{prooftree}[center=false]
-      \Hypo{ \Gamma, A \vdash B }
-      \Infer1{ \Gamma \vdash A \to B }
+      \hypo{ \Gamma, A \vdash B }
+      \infer1{ \Gamma \vdash A \to B }
     \end{prooftree}
   \end{example}
 \end{csdoc}
@@ -356,9 +365,9 @@ For instance, the first line of the example above could be written
   The default value is \lit{1.5em}.
   \begin{example}{gobble=4}
     \begin{prooftree}[separation=0.5em]
-      \Hypo{ A } \Hypo{ B } \Infer2{ C }
-      \Hypo{ D } \Hypo{ E } \Hypo{ F } \Infer3{ G }
-      \Hypo{ H } \Infer[separation=3em]3{ K }
+      \hypo{ A } \hypo{ B } \infer2{ C }
+      \hypo{ D } \hypo{ E } \hypo{ F } \infer3{ G }
+      \hypo{ H } \infer[separation=3em]3{ K }
     \end{prooftree}
   \end{example}
 \end{csdoc}
@@ -368,10 +377,10 @@ For instance, the first line of the example above could be written
   The default value is \lit{0.7ex}.
   \begin{example}{gobble=4}
     \begin{prooftree}[rule margin=2ex]
-      \Hypo{ \Gamma, A &\vdash B }
-      \Infer1[abs]{ \Gamma &\vdash A\to B }
-      \Hypo{ \Gamma \vdash A }
-      \Infer2[app]{ \Gamma \vdash B }
+      \hypo{ \Gamma, A &\vdash B }
+      \infer1[abs]{ \Gamma &\vdash A\to B }
+      \hypo{ \Gamma \vdash A }
+      \infer2[app]{ \Gamma \vdash B }
     \end{prooftree}
   \end{example}
 \end{csdoc}
@@ -401,21 +410,21 @@ For instance, the first line of the example above could be written
   section~\ref{sec:styles}.
 \end{csdoc}
 
-In the optional argument of the \cs{Infer} statement, rule styles can be
+In the optional argument of the \cs{infer} statement, rule styles can be
 specified directly, without prefixing the style name by ``\lit{rule style=}''.
-For instance, \cs{Infer}\lit{[dashed]} is equivalent to
-\cs{Infer}\lit{[rule style=dashed]}.
+For instance, \cs{infer}\lit{[dashed]} is equivalent to
+\cs{infer}\lit{[rule style=dashed]}.
 
 \begin{example}{gobble=2}
   \begin{prooftree}
-    \Hypo{ \Gamma &\vdash A \to B }
-    \Infer[no rule]1{ \Gamma &\vdash {!A} \multimap B }
-    \Hypo{ \Delta &\vdash A }
-    \Infer[rule thickness=2pt]1{ \Delta &\vdash {!A} }
-    \Infer0{ B \vdash B }
-    \Infer[dashed]2{ \Delta, {!A}\multimap B \vdash B }
-    \Infer2{ \Gamma, \Delta &\vdash B }
-    \Infer[double]1{ \Gamma \cup \Delta &\vdash B }
+    \hypo{ \Gamma &\vdash A \to B }
+    \infer[no rule]1{ \Gamma &\vdash {!A} \multimap B }
+    \hypo{ \Delta &\vdash A }
+    \infer[rule thickness=2pt]1{ \Delta &\vdash {!A} }
+    \infer0{ B \vdash B }
+    \infer[dashed]2{ \Delta, {!A}\multimap B \vdash B }
+    \infer2{ \Gamma, \Delta &\vdash B }
+    \infer[double]1{ \Gamma \cup \Delta &\vdash B }
   \end{prooftree}
 \end{example}
 
@@ -447,10 +456,10 @@ For instance, \cs{Infer}\lit{[dashed]} is equivalent to
     \begin{prooftree}[rule code={\hbox{\tikz
         \draw[decorate,decoration={snake,amplitude=.3ex}]
         (0,0) -- (\hsize,0);}}]
-      \Hypo{ \Gamma &\vdash A }
-      \Infer1{ \Gamma &\vdash A, \ldots, A }
-      \Hypo{ \Delta, A, \ldots, A \vdash \Theta }
-      \Infer2{ \Gamma, \Delta \vdash \Theta }
+      \hypo{ \Gamma &\vdash A }
+      \infer1{ \Gamma &\vdash A, \ldots, A }
+      \hypo{ \Delta, A, \ldots, A \vdash \Theta }
+      \infer2{ \Gamma, \Delta \vdash \Theta }
     \end{prooftree}
   \end{example}
   Note that this example requires the \package{tikz} package, with the
@@ -466,7 +475,7 @@ For instance, \cs{Infer}\lit{[dashed]} is equivalent to
   Defines how conclusions are formatted.
   The code is arbitrary \TeX\ code, composed in horizontal mode.
   The macro \cs{inserttext} is used to insert the actual text passed to the
-  \cs{Hypo} and \cs{Infer} statements.
+  \cs{hypo} and \cs{infer} statements.
   The \opt{template} value is used for conclusions with no alignment mark.
   The \opt{left template} and \opt{right template} values are used on the left
   and right side of the alignment mark when it is present.
@@ -474,14 +483,14 @@ For instance, \cs{Infer}\lit{[dashed]} is equivalent to
   conclusions are set in math mode.
   The default values for \opt{left template} and \opt{right template} are
   similar, with spacing assuming that a relation symbol is put near the
-  alignment mark, so that \verb|\Infer1{A &\vdash B}| is spaced correctly.
+  alignment mark, so that \verb|\infer1{A &\vdash B}| is spaced correctly.
 
   \begin{example}{gobble=4}
     \begin{prooftree}[template=(\textbf\inserttext)]
-      \Hypo{ foo }
-      \Hypo{ bar }
-      \Infer1{ baz }
-      \Infer2{ quux }
+      \hypo{ foo }
+      \hypo{ bar }
+      \infer1{ baz }
+      \infer2{ quux }
     \end{prooftree}
   \end{example}
 \end{csdoc}
@@ -493,16 +502,16 @@ For instance, \cs{Infer}\lit{[dashed]} is equivalent to
     \opt{right label=}\meta{text}}
   The text to use as the labels of the rules, on the left and on the right
   of the inference line.
-  Using the second optional argument in \cs{Infer} is equivalent to setting
+  Using the second optional argument in \cs{infer} is equivalent to setting
   the \env{right label} option with the value of that argument.
 
   \begin{example}{gobble=4}
     \begin{prooftree}
-      \Hypo{ \Gamma, A &\vdash B }
-      \Infer[left label=$\lambda$]1[abs]
+      \hypo{ \Gamma, A &\vdash B }
+      \infer[left label=$\lambda$]1[abs]
         { \Gamma &\vdash A\to B }
-      \Hypo{ \Gamma \vdash A }
-      \Infer[left label=@]2[app]{ \Gamma \vdash B }
+      \hypo{ \Gamma \vdash A }
+      \infer[left label=@]2[app]{ \Gamma \vdash B }
     \end{prooftree}
   \end{example}
 \end{csdoc}
@@ -546,9 +555,9 @@ using a single definition.
       separation = 1em, rule margin = .5ex,
       template = \footnotesize$\inserttext$ }
     \begin{prooftree}[small]
-      \Hypo{ \Gamma, A \vdash B }
-      \Infer1{ \Gamma \vdash A\to B }
-      \Hypo{ \Gamma \vdash A } \Infer2{ \Gamma \vdash B }
+      \hypo{ \Gamma, A \vdash B }
+      \infer1{ \Gamma \vdash A\to B }
+      \hypo{ \Gamma \vdash A } \infer2{ \Gamma \vdash B }
     \end{prooftree}
   \end{example}
 \end{csdoc}
@@ -568,10 +577,10 @@ using a single definition.
         \draw[decorate,decoration={snake,amplitude=.3ex}]
         (0,0) -- (\hsize,0);}}}
     \begin{prooftree}
-      \Hypo{ \Gamma &\vdash A }
-      \Infer1{ \Gamma &\vdash A, \ldots, A }
-      \Hypo{ \Delta, A, \ldots, A \vdash \Theta }
-      \Infer[zigzag]2{ \Gamma, \Delta \vdash \Theta }
+      \hypo{ \Gamma &\vdash A }
+      \infer1{ \Gamma &\vdash A, \ldots, A }
+      \hypo{ \Delta, A, \ldots, A \vdash \Theta }
+      \infer[zigzag]2{ \Gamma, \Delta \vdash \Theta }
     \end{prooftree}
   \end{example}
 \end{csdoc}
