--- a/ebproof.sty
+++ b/ebproof.sty
@@ -1,7 +1,7 @@
 % The ebproof package - Formal proofs in the style of sequent calculus
 
 %% ebproof.sty
-%% Copyright 2015 Emmanuel Beffara <manu@beffara.org>
+%% Copyright 2015-2017 Emmanuel Beffara <manu@beffara.org>
 
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3
@@ -20,7 +20,7 @@
 \NeedsTeXFormat{LaTeX2e}
 \RequirePackage{expl3}
 \RequirePackage{xparse}
-\ProvidesExplPackage{ebproof}{2015/05/30}{1.2pre}{EB's proof trees}
+\ProvidesExplPackage{ebproof}{2017/05/17}{2.0}{EB's proof trees}
 
 
 %% Parameters
