--- a/ebproof.tex
+++ b/ebproof.tex
@@ -612,6 +612,12 @@ This work consists of the files \texttt{ebproof.sty} and \texttt{ebproof.tex}.
 This section lists the principal evolutions of the package, in reverse
 chronological order.
 \begin{description}
+\item[Version 2.1]
+  In preparation.
+  \begin{itemize}
+  \item Made the \env{prooftree} environment robust to use in tabular
+    contexts.
+  \end{itemize}
 \item[Version 2.0]
   A complete rewrite of the code using the \LaTeX3 programming environment. 
   The incompatible changes from the user's point of view are the following:
