Change the date in ProvidesExplPackage for compatibility.
The format YYYY-MM-DD causes errors in versions of LaTeX2e prior to
2017-03-08 but the format YYYY/MM/DD works.

--- a/ebproof.dtx
+++ b/ebproof.dtx
@@ -692,7 +692,7 @@
 \NeedsTeXFormat{LaTeX2e}
 \RequirePackage{expl3}
 \RequirePackage{xparse}
-\ProvidesExplPackage{ebproof}{2017-05-17}{2.0}{EB's proof trees}
+\ProvidesExplPackage{ebproof}{2018/09/21}{2.1}{EB's proof trees}
 %<@@=ebproof>
 %    \end{macrocode}
 %
