--- a/ebproof.dtx
+++ b/ebproof.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-% Copyright (C) 2015-2018 by Emmanuel Beffara
+% Copyright (C) 2015-2020 by Emmanuel Beffara
 %
 % This file may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License, either version 1.3 of this license or (at
@@ -49,7 +49,7 @@
 %     }^^A
 % }
 %
-% \date{Version 2.0 -- Released 2017-05-17}
+% \date{Version 2.1 -- Released 2020-08-19}
 %
 % \maketitle
 %
@@ -648,14 +648,15 @@
 % This section lists the principal evolutions of the package, in reverse
 % chronological order.
 % \begin{description}
-% \item[Version 2.1]
-%   In preparation.
+% \item[Version 2.1 (2020-08-19)]
+%   Mostly a bugfix release.
 %   \begin{itemize}
-%   \item Made the \env{prooftree} environment robust to use in tabular
+%   \item Makes the \env{prooftree} environment robust to use in tabular
 %     contexts.
-%   \item Fixed a compatibility issue with \LaTeX\ release 2020-10-01.
+%   \item Adds the \cs{overlay} statement.
+%   \item Fixes a compatibility issue with \LaTeX\ release 2020-10-01.
 %   \end{itemize}
-% \item[Version 2.0]
+% \item[Version 2.0 (2017-05-17)]
 %   A complete rewrite of the code using the \LaTeX3 programming environment. 
 %   The incompatible changes from the user's point of view are the following:
 %   \begin{itemize}
@@ -672,11 +673,11 @@
 %   \item The statement \cs{rewrite} generalizes \cs{Alter},
 %   \item The option \cmd{label axis} controls vertical alignment of labels.
 %   \end{itemize}
-% \item[Version 1.1]
+% \item[Version 1.1 (2015-03-13)]
 %   A bugfix release.
 %   In \cmd{template} options, one now uses \cs{inserttext} instead of \verb|#1|
 %   for the text arguments, which improves robustness.
-% \item[Version 1.0]
+% \item[Version 1.0 (2015-02-04)]
 %   The first public release.
 % \end{description}
 %
@@ -693,7 +694,7 @@
 \NeedsTeXFormat{LaTeX2e}
 \RequirePackage{expl3}
 \RequirePackage{xparse}
-\ProvidesExplPackage{ebproof}{2018/09/21}{2.1}{EB's proof trees}
+\ProvidesExplPackage{ebproof}{2020/08/19}{2.1}{EB's proof trees}
 %<@@=ebproof>
 %    \end{macrocode}
 %
@@ -728,9 +729,10 @@ label~axis .dim_set:N = \l_@@_label_axis_dim,
 }
 %    \end{macrocode}
 %
-% \begin{macro}{\ebproofnewstyle}
-%   We then define the document-level macro \cs{ebproofnewstyle} and use it to
-%   define the default styles. This simply consists in defining a meta-key.
+% \begin{macro}{\ebproofnewrulestyle}
+%   We then define the document-level macro \cs{ebproofnewrulestyle} and use
+%   it to define the default styles. This simply consists in defining a
+%   meta-key.
 %    \begin{macrocode}
 \NewDocumentCommand \ebproofnewrulestyle { mm } {
   \keys_define:nn { ebproof } {
